--- a/wiki-tools/pom.xml
+++ b/wiki-tools/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.wikia</groupId>
         <artifactId>holmes</artifactId>
-        <version>0.5-SNAPSHOT</version>
+        <version>0.5</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>${holmes.group}</groupId>
-    <version>${holmes.version}</version>
+    <groupId>com.wikia</groupId>
+    <version>0.5</version>
     <artifactId>wiki-tools</artifactId>
     <packaging>jar</packaging>
 
